# textracter

./: .gitignore
backend/: .env.example  pyproject.toml
backend/app/: main.py  utils.py
backend/app/routes/: analyze_document.py  models.py
frontend/: package-lock.json  package.json
frontend/src/app/: layout.tsx  page.tsx
frontend/src/components/: DocumentUploader.tsx  Result.tsx
frontend/src/components/layout/: Footer.tsx  Header.tsx
frontend/src/interface/: types.tsx
frontend/src/mock/: response.tsx
