[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["Álvaro Peixoto <alvaro.peixoto@dcomp.ufs.br>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.115.2"
uvicorn = "^0.32.0"
python-multipart = "^0.0.13"
python-dotenv = "^1.0.1"
boto3 = "^1.35.44"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
